Changed the layout and bootstrap files

--- a/VueJSTestSite/Views/Home/Index.cshtml
+++ b/VueJSTestSite/Views/Home/Index.cshtml
@@ -3,10 +3,13 @@
 }
 
 <div class="jumbotron">
-    <h1>Testing Purposes</h1>
+    <h1 id="header">Testing Purposes</h1>
+    @*
+    Practice 1:
     <div id="app">
         {{ message }}
     </div>
+        *@
     <br />
     <div id="app-2">
         @* v- is called directive has multiple attributes *@
