--- a/VueJSTestSite/Views/Home/Index.cshtml
+++ b/VueJSTestSite/Views/Home/Index.cshtml
@@ -5,16 +5,41 @@
 <div class="jumbotron">
     <h1 id="header">Testing Purposes</h1>
     @*
-    Practice 1:
-    <div id="app">
-        {{ message }}
-    </div>
-        *@
+        Practice 1:
+        <div id="app">
+            {{ message }}
+        </div>
+    *@
     <br />
-    <div id="app-2">
-        @* v- is called directive has multiple attributes *@
-        <span v-bind:title="message">
-            Hover mouse to see dynamically bound title!
-        </span>
-    </div>
+    @*<div id="app-2">
+            @* v- is called directive has multiple attributes
+            <span v-bind:title="message">
+                Hover mouse to see dynamically bound title!
+            </span>
+        </div>*@
+
+    @*<div id="app-3">
+            <span v-if="seen">Now you see me</span>
+        </div>*@
+
+    @*<div id="app-4">
+            <ol>
+                <li v-for="todo in todos">
+                    {{ todo.text }}
+                </li>
+            </ol>
+            <input id="newItem" type="text" />
+            <button v-on:click="addToDoItem">Add to list</button>
+        </div>*@
+
+    @*<div id="app-5">
+            <p>{{ message }}</p>
+            <button v-on:click="reverseMessage">Reverse Message</button>
+        </div>*@
+
+    @*writes directly to the page*@
+    @*<div id="app-6">
+        <p>{{ message }}</p>
+        <input v-model="message">
+    </div>*@
 </div>
